# splinekit

./: .gitignore  LICENSE  README.md  activate  pyproject.toml
.github/workflows/: deploy-docs.yml  release.yml  test.yml
.virtual_documents/dev/Jupyter/: bspline_bases.ipynb  bspline_interactive_shape.ipynb  bspline_poles.ipynb  bspline_random1D.ipynb  bspline_vs_exponentials.ipynb  bspline_vs_trigonometry.ipynb
.virtual_documents/development/Jupyter/: Untitled.ipynb  bspline_interactive_shape.ipynb  bspline_inverse_sequence.ipynb  bspline_numeric_stability.ipynb  bspline_poles.ipynb  bspline_random2D.ipynb  bspline_static_shape.ipynb  bspline_vs_exponentials.ipynb  bspline_vs_pi.ipynb  bspline_vs_trigonometry.ipynb
_build/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/.doctrees/bases/: 01_bases.doctree  index.doctree
_build/.doctrees/bsplines/: 01_bsplines.doctree  index.doctree
_build/.doctrees/glossary/: glossary-numbers.doctree  glossary-polynomials.doctree  glossary-splines.doctree  (+2 more)
_build/bases/: 01_bases.html  index.html
_build/bsplines/: 01_bsplines.html  index.html
_build/glossary/: index.html
_build/interval/: index.html
_build/periodic_nonuniform_piecewise/: 01_periodic_nonuniform_piecewise.html  index.html
_build/periodic_spline_1d/: 01_periodic_spline_1d.html  index.html
_build/spline_padding/: 01_spline_padding.html  index.html
_build/spline_utilities/: index.html
dev/Jupyter/: bspline_bases.ipynb  bspline_interactive_shape.ipynb  bspline_inverse_sequence.ipynb  bspline_random1D.ipynb  bspline_random2D.ipynb  bspline_vs_exponentials.ipynb  bspline_vs_trigonometry.ipynb
development/: 01_public_spline_utilities.rst  02_private_spline_utilities.rst  splinepadding.dylib
development/Jupyter/: Untitled.ipynb  bspline_bases.ipynb  bspline_interactive_shape.ipynb  bspline_inverse_sequence.ipynb  bspline_numeric_stability.ipynb  bspline_poles.ipynb  bspline_random1D.ipynb  bspline_random2D.ipynb  bspline_static_shape.ipynb  bspline_vs_exponentials.ipynb  bspline_vs_pi.ipynb  bspline_vs_trigonometry.ipynb  dynamic.ipynb
development/Wolfram/: Bspline Poles.nb  IntervalChecks.nb  PeriodicSplinesChecks.nb  SplinePaddingChecks.nb  Test BSplines.nb  Test PeriodicNonuniformPiecewise.nb  Test PeriodicSpline1D.nb  Test SplineUtilities.nb  Verify doc.nb  rescued Test SplinePadding.nb
docs/: conf.py  glossary.rst  index.rst
docs/interval/: noxfile.py
docs/notebooks/: bspline_bases.nblink  bspline_interactive_shape.nblink  bspline_inverse_sequence.nblink  bspline_numeric_stability.nblink  bspline_poles.nblink  bspline_random1D.nblink  bspline_random2D.nblink  bspline_static_shape.nblink  bspline_vs_exponentials.nblink  bspline_vs_pi.nblink  bspline_vs_trigonometry.nblink
docs/periodic_spline_1d/: index.rst
docs/spline_padding/: noxfile.py
docs/spline_utilities/: 01_spline_utilities.rst
src/splinekit/: __init__.py  bases.py  bsplines.py  periodic_nonuniform_piecewise.py  periodic_spline_1d.py  spline_padding.py  spline_utilities.py  untitled0.py
tests/: test_bsplines.py  test_periodic_nonuniform_piecewise.py  test_periodic_spline_1d.py  test_spline_padding.py  test_spline_utilities.py
(+80 files in other folders)
