[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splinekit"
version = "0.0.1"
authors = [
  { name="Philippe Thévenaz", email="philippe.thevenaz@icloud.com" },
]
description = "A set of functions and classes to handle periodic 1D polynomial splines"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/splinekit"
